# dualshock4

./: .gitignore  .gitmodules  README.md
ds4_driver/ds4_driver/config/: params.yaml
dualshock/install/: local_setup.sh  setup.sh
dualshock/install/ds4_driver/lib/ds4_driver/: ds4_test_node.py  joint_control_node.py  nuri_control_node.py
dualshock/install/ds4_driver/local/lib/python3.10/dist-packages/ds4_driver/: controller_ros.py
dualshock/install/ds4_driver/share/ds4_driver/: local_setup.sh  package.sh
dualshock/install/ds4_driver/share/ds4_driver/launch/: test.launch.py
dualshock/install/ds4_driver/share/ds4_driver/nodes/: control_node.py  nuri_control_node
dualshock/install/ds4_driver_msgs/share/ds4_driver_msgs/: package.sh
dualshock/install/ds4_driver_msgs/share/ds4_driver_msgs/cmake/: export_ds4_driver_msgs__rosidl_generator_pyExport.cmake
dualshock/install/prototype_motor/lib/prototype_motor/: nurimotor
dualshock/install/prototype_motor/share/prototype_motor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
dualshock/install/prototype_motor/share/prototype_motor/cmake/: prototype_motorConfig.cmake
dualshock/install/prototype_move/lib/prototype_move/: teleop_keyboard
dualshock/install/prototype_move/share/prototype_move/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dualshock/install/prototype_move/share/prototype_move/launch/: prototype_move_launch.py
src/: CMakeLists.txt  demo.launch.xml  package.xml
